--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
+# ignore
 # Dependency directories (remove the comment below to include it)
- vendor/
+vendor/
+**/.idea
+**/.vscode
+**/.DS_Store
